--- a/StudentManagement_WebAPI/appsettings.json
+++ b/StudentManagement_WebAPI/appsettings.json
@@ -8,10 +8,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SchoolDB": "Server= LEILA\\BAOVIET;Database=SchoolDB;Trusted_Connection=True;"
+    "SchoolDB": "Server= .\\BAOVIET;Database=SchoolDB;Trusted_Connection=True;"
   },
   "Jwt": {
     "Key": "tdhxybngxzzcmimbqdsvcdyekydqtuot",
-    "Issuer": "SchoolAuthenticationServer",
+    "Issuer": "SchoolAuthenticationServer"
   }
 }
