be for angular app

--- a/UserManagement_WebAPI/appsettings.json
+++ b/UserManagement_WebAPI/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SchoolDB": "Server= .\\BAOVIET;Database=SchoolDB;Trusted_Connection=True;"
+    "SchoolDB": "Server= BAOVIET;Database=SchoolDB;Trusted_Connection=True;"
   },
   "Jwt": {
     "Key": "tdhxybngxzzcmimbqdsvcdyekydqtuot",
