--- a/UserManagement_WebAPI/appsettings.json
+++ b/UserManagement_WebAPI/appsettings.json
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SchoolDB": "Server= BAOVIET;Database=SchoolDB;Trusted_Connection=True;"
+    "SchoolDB": "Server=BAOVIET;Database=SchoolDB;Trusted_Connection=True;",
+    "CloudDB": "Data Source=SQL5080.site4now.net,1433;Initial Catalog=db_a83378_userdb;User Id=db_a83378_userdb_admin;Password=baoviet1007"
   },
   "Jwt": {
     "Key": "tdhxybngxzzcmimbqdsvcdyekydqtuot",
